--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,7 @@
 	proquest-url = {https://www.proquest.com/dissertations-theses/wirelessly-coordinated-open-loop-coherent/docview/3236317751/se-2},
 	year = {2025},
 	bibtex_show = {true},
+	selected = {true},
 	bdsk-url-1 = {https://www.proquest.com/dissertations-theses/wirelessly-coordinated-open-loop-coherent/docview/3236317751/se-2}}
 
 @inproceedings{merlo2025apsursi,
