--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,6 +45,7 @@
 	arxiv = {2506.07267},
 	author = {Merlo, Jason M. and Wagner, Samuel and Lancaster, John and Nanzer, Jeffrey A.},
 	journal = {arXiv preprint arXiv:2506.07267},
+	bibtex_show={true},
 	title = {Real-Time High-Accuracy Digital Wireless Time, Frequency, and Phase Calibration For Coherent Distributed Antenna Arrays},
 	year = {2025}}
 
@@ -54,8 +55,20 @@
 	arxiv = {2506.13014},
 	author = {Merlo, Jason M. and Nanzer, Jeffrey A.},
 	journal = {arXiv preprint arXiv:2506.13014},
+	bibtex_show={true},
 	title = {Collaborative Beamforming for Communication Applications Using a Two-Element Fully-Wireless Open-Loop Coherent Distributed Array},
 	year = {2025}}
+
+@article{colonberrios2025threedimensionalmillimeterwaveimagingusing,
+      abbr = {Preprint},
+	  title={Three-Dimensional Millimeter-Wave Imaging Using Active Incoherent Fourier Processing and Pulse Compression}, 
+      author={Jorge R. Colon-Berrios and Jason M. Merlo and Jeffrey A. Nanzer},
+      year={2025},
+      arxiv={2507.07239},
+	  journal = {arXiv preprint arXiv:2507.07239},
+	  bibtex_show={true},
+	  abstract={We present a novel three-dimensional (3D) imaging approach that combines two-dimensional spatial Fourier-domain imaging techniques with traditional radar pulse compression to recover both cross-range and down-range scene information. The imaging system employs four transmitters, three of which emit spatially and temporally incoherent noise signals, while the fourth transmits a known linear frequency modulated (LFM) pulsed signal. The spatial incoherence of the noise signals enables sampling of the 2D spatial Fourier spectrum of the scene from which two-dimensional cross-range (azimuth and elevation) images can be formed via interferometric processing. Simultaneously, the LFM signal enables high-resolution downrange imaging through matched filtering. The received signals consist of a superposition of the noise sources and the known pulse allowing for joint recovery of all three dimensions. We describe the system architecture and waveform design, and demonstrate the imaging technique using both simulations with a linear array and experimental data from a 38 GHz active incoherent millimeter-wave imaging system with 23-element randomized array. Results show the reconstruction of targets in three dimensions.},
+}
 
 @inproceedings{merlo2024past,
 	abbr = {IEEE PAST},
