Updated bio and bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,6 +26,22 @@
 	selected = {true},
 	bdsk-url-1 = {https://www.proquest.com/dissertations-theses/wirelessly-coordinated-open-loop-coherent/docview/3236317751/se-2}}
 
+@ARTICLE{shandi2025jmw,
+  author={Shandi, Naim and Merlo, Jason M. and Nanzer, Jeffrey A.},
+  abstract={We demonstrate distributed beamforming and beamsteering from a six-node distributed phased array using fully wireless coordination with decentralized time synchronization. In wireless applications such as distributed beamforming, high-accuracy time synchronization across the array is crucial for high coherent gain. The decentralized time synchronization method employed is based on the average consensus algorithm and the two-way time transfer method presented in our previous work, which achieved picosecond-level time synchronization with a cabled frequency reference. The system presented in this paper utilizes a centralized wireless frequency transfer method to achieve wireless frequency syntonization in a fully wireless coordination and a distributed computing system architecture. We experimentally evaluate system performance through beamforming and beamsteering to a receiver 16.3 m away from the six-node non-uniformly distributed antenna array, achieving an average coherent gain of 98% of the ideal gain at a carrier frequency of 1.05 GHz. The average time synchronization accuracy achieved was less than 36 ps.},
+  journal={IEEE Journal of Microwaves}, 
+  bibtex_show={true},
+  abbr = {IEEE JMW},
+  title={Distributed Beamforming Using Decentralized Time Synchronization in a Six-Element Array}, 
+  year={2025},
+  volume={5},
+  number={5},
+  pages={1094-1106},
+  ieee={https://doi.org/10.1109/JMW.2025.3601036},
+  keywords={Wireless communication;Phased arrays;Time-frequency analysis;Accuracy;Array signal processing;Wireless networks;Receiving antennas;Microwave antenna arrays;Topology;Synchronization;Consensus averaging;distributed antenna arrays;distributed beamforming;distributed collaborative beamforming;distributed phased arrays;synchronization;wireless networks},
+  doi={10.1109/JMW.2025.3601036}}
+
+
 @inproceedings{merlo2025apsursi,
 	abbr = {IEEE AP-S/URSI},
 	abstract = {In recent years, a significant interest in wirelessly coordinated distributed antenna arrays has emerged due to their unique benefits they can provide to communication and remote sensing applications. Due to the distributed nature of these arrays, they are inherently scalable, allowing elements to join and leave the array in an ad-hoc manner, providing robustness to element failure, as well as the ability to be reconfigured during operation to provide more favorable beam patterns for a given frequency or mode of operation. While wirelessly coordinated distributed phased arrays (DPAs) will be an enabling technology, the challenge of efficient electrical state coordination of each array element remains open, requiring each element to be coordinated to a fraction of the carrier wavelength to ensure high levels of coherence to support beamforming. While fine coordination impairments may be corrected on the receive side a posteriori given sufficient computational power, transmit beamforming requires all elements' electrical states to be aligned prior to transmission to achieve coherent summation of transmitted waveforms in the desired directions, necessitating real-time wireless coordination. In this work we demonstrate the application of a fully digital wirelessly coordinated DPA for collaborative beamforming by building on previous work developing a computationally efficient fully digital wireless high-accuracy time synchronization technique (S. Prager, M. S. Haynes, and M. Moghaddam, IEEE Trans. Microw. Theory Tech.s, vol. 68, no. 11, pp. 4787--4804, 2020.; J. M. Merlo, S. R. Mghabghab, and J. A. Nanzer, IEEE Trans. Microw. Theory Tech., vol. 71, pp. 1720--1731, Dec. 2022.). While previous works have demonstrated beamforming using fully-wirelessly coordinated DPAs, they have relied on global navigation satellite system (GNSS)-based, or ad-hoc, continuous analog frequency references for frequency alignment. More recently, a fully digital coordination technique for DPAs was demonstrated using a pulsed single tone spectral estimation technique enabling decentralized frequency estimation (R. H. Kenney and J. W. McDaniel, 2024 IEEE/MTT-S IMS 2024, pp. 493--496, 2024.); however, this is the first demonstration known to the authors using a high-accuracy time-based technique to estimate and compensate for time, frequency, and phase offsets simultaneously at the carrier wavelength, without using direct spectral estimation, simplifying the estimation process, and eliminating the possibility of ambiguity when compared with carrier phase-based tracking techniques. Furthermore, due to the simplicity and efficiency of the algorithm, the entire process may be performed using off the shelf software-defined radios (SDRs) and all necessary processing is performed on commodity general purpose desktop processors without requiring acceleration using specialized graphics processing units (GPUs) or field-programmable gate arrays (FPGAs).},
@@ -97,9 +113,12 @@
 	ieee = {https://doi.org/10.1109/TCOMM.2024.3480993},
 	journal = {IEEE Transactions on Communications},
 	keywords = {Synchronization;Clocks;Accuracy;Estimation;Phased arrays;Topology;Signal to noise ratio;Delay effects;Array signal processing;Time-frequency analysis;Consensus averaging;distributed antenna arrays;distributed beamforming;distributed phased arrays;synchronization;wireless networks},
-	month = {October},
+	month = {June},
 	title = {Decentralized Picosecond Synchronization for Distributed Wireless Systems},
-	year = {2024},
+	year={2025},
+	volume={73},
+	number={6},
+	pages={4425-4438},
 	bdsk-url-1 = {https://doi.org/10.1109/TCOMM.2024.3480993}}
 
 @inproceedings{merlo2024grcon,
